spacing fixes

--- a/assets/css/css.css
+++ b/assets/css/css.css
@@ -2,13 +2,14 @@ h1,h2,h3,h4,h5,h6 {
 	font-weight: bold;
 }
 
-h1,h2,h3,h4,h5,h6:first-of-type {
-	margin-top: 0px;
-}
-
 img {
 	max-width: 100%;
 	max-height: 100%;
+	border: solid 1px black;
+}
+
+.article h1,h2,h3,h4,h5,h6:first-of-type {
+	margin-top: 0px;
 }
 
 @media screen {
@@ -60,7 +61,6 @@ img {
 		display: block;
 		width: 80%;
 		margin: 15px auto;
-		border: 1px solid black;
 	}
 }
 
